# keepass-rx

./: .drone.yml  .gitignore  .rustfmt.toml  COPYING  Cargo.toml  LICENSE  README.md  about.hbs  about.toml  clickable.yaml  deny.toml  keepassrx.apparmor  keepassrx.desktop  manifest.json  snapcraft.yaml  todo.org
.forgejo/workflows/: build.yaml
.github/workflows/: sync.yml
actor-macro/: Cargo.toml
actor-macro/src/: lib.rs
keepass-rx/: COPYING  Cargo.toml  LICENSE  LICENSE.GPLv3  snapcraft.yaml  test.kdbx
keepass-rx/assets/: COPYING
keepass-rx/po/: de.po  et.po  fr.po  is.po  it.po  keepassrx.projectmoon.pot  nl.po  ru.po  ta.po  uk.po
keepass-rx/qml/: Main.qml
keepass-rx/qml/components/: ConfigurationGroup.qml  DetailField.qml  EntryItem.qml  TotpFeature.qml
keepass-rx/qml/pages/: AboutPage.qml  AttachmentPage.qml  DBList.qml  EntriesPage.qml  LicenseTextPage.qml  LicensesPage.qml  NotePage.qml  OpenDBPage.qml  SettingsPage.qml  SingleEntry.qml  UnlockPage.qml  ViewAttachment.qml
keepass-rx/src/: app.rs  build.rs  lib.rs  license.rs  main.rs  qrc.rs
keepass-rx/src/actor/: mod.rs
keepass-rx/src/crypto/: mod.rs
keepass-rx/src/gui/: actor.rs  colors.rs  instructions.rs  mod.rs  models.rs  settings.rs  utils.rs
keepass-rx/src/gui/qml/: container_stack.rs  db.rs  entry.rs  licenses.rs  list_item.rs  mod.rs
keepass-rx/src/rx/: entropy.rs  entry_mirror.rs  keepass_query.rs  kpxc_search.rs  kxpc_search.rs  mod.rs  rx_container.rs  rx_db.rs  rx_entry.rs  rx_group.rs  rx_gui_traits.rs  rx_loader.rs  search.rs  virtual_hierarchy.rs  zeroable_db.rs
keepass-rx/tests/: load_fixtures.rs
keepass-rx/tests/fixtures/: README.md
mirror_from_macro/: Cargo.toml
mirror_from_macro/src/: lib.rs
po/: ca.po  ca@valencia.po  de.po  en_GB.po  en_US.po  et.po  fr.po  id.po  is.po  it.po  keepassrx.projectmoon.pot  lo.po  nl.po  ru.po  ta.po  tl.po  uk.po
po/share/locale/de/LC_MESSAGES/: keepassrx.projectmoon.mo
po/share/locale/fr/LC_MESSAGES/: keepassrx.projectmoon.mo
po/share/locale/is/LC_MESSAGES/: keepassrx.projectmoon.mo
po/share/locale/nl/LC_MESSAGES/: keepassrx.projectmoon.mo
po/share/locale/uk/LC_MESSAGES/: keepassrx.projectmoon.mo
qml/: Main.qml
qml/components/: DBEntry.qml  EntryItem.qml  NoFeatures.qml  SettingsItem.qml  TextFieldPlaceholder.qml  TotpFeature.qml
qml/pages/: AboutPage.qml  BlankPage.qml  DBList.qml  EntriesPage.qml  OpenDBPage.qml  SettingsPage.qml  SingleEntry.qml  UnlockPage.qml
src/: app.rs  build.rs  gui.rs  main.rs  qrc.rs  rx.rs
src/crypto/: mod.rs
src/gui/: actor.rs  colors.rs  icons.rs  mod.rs  models.rs  utils.rs
src/rx/: easy_open.rs  icons.rs  mod.rs  rx_container.rs  rx_db.rs  rx_entry.rs  rx_group.rs  rx_gui_traits.rs  rx_loader.rs  virtual_hierarchy.rs  zeroable_db.rs
