[package]
name = "keepassrx"
version = "0.1.4"
authors = ["projectmoon <projectmoon@agnos.is>"]
edition = "2024"
build = "src/build.rs"

[dependencies]
qmetaobject = "0.2.9"
gettext-rs = "0.7"
cstr = "0.2.11"
cpp = "0.5"
dirs = "6.0.0"
anyhow = "1.0.100"
keepass = {version = "0.8.12", features = [ "totp" ] }
humanize-duration = "0.0.7"
uriparse = "0.6.4"
querystring = "1.1.0"
totp-rs = { version = "5.7.0", features = ["steam"] }
uuid = { version = "1.18.1", features = ["zerocopy"] }
tokio = { version = "1.48.0", features = ["full"] }
actix = "0.13.5"
qmeta-async = { git = "https://gitlab.com/rubdos/qmeta-async", version = "0.1.0" }
base64 = "0.22.1"
infer = "0.19.0"
zeroize = { version = "1.8.2", features = ["alloc", "aarch64", "std"] }

[build-dependencies]
cpp_build = "0.5"
