[package]
name = "keepassrx"
description = "KeePass password manager for Ubuntu Touch"
license = "AGPL-3.0-or-later"
version = "0.12.0"
authors = ["projectmoon <projectmoon@agnos.is>"]
edition = "2024"
build = "src/build.rs"

[dependencies]
actor-macro = { path = "../actor-macro" }
qmetaobject = { version = "0.2.9" }
gettext-rs = "0.7"
cstr = "0.2.11"
cpp = "0.5"
dirs = "6.0.0"
anyhow = "1.0.100"
keepass = {version = "0.8.12", features = [ "totp" ] }
humanize-duration = "0.0.7"
uriparse = "0.6.4"
querystring = "1.1.0"
totp-rs = { version = "5.7.0", features = ["steam"] }
uuid = { version = "1.18.1", features = ["zerocopy"] }
tokio = { version = "1.48.0", features = ["full"] }
actix = "0.13.5"
qmeta-async = { git = "https://gitlab.com/rubdos/qmeta-async", version = "0.1.0" }
base64 = "0.22.1"
infer = "0.19.0"
zeroize = { version = "1.8.2", features = ["alloc", "aarch64", "derive"] }
take_mut = "0.2.2"
aes-gcm = { version = "0.10.3", features = ["zeroize"] }
secstr = "0.5.1"
scrypt = "0.11.0"
rayon = "1.11.0"
keyring = { version = "3", features = ["linux-native"] }
libsodium-rs = { version = "0.2.1", features = ["fetch-latest", "optimized"] }
unicase = "2.8.1"
indexmap = "2.12.0"
regex = "1.12.2"
paste = "1.0.15"
palette = "0.7.6"
poison-guard = "0.1.0"
fuzzy-matcher = "0.3.7"
qttypes = "0.2.12"

[build-dependencies]
cpp_build = "0.5"
walkdir = "2.5.0"

[features]
# Compile the GUI portion of the application (link QT etc).
gui = []
default = ["gui"]
